fixing bold text in truncated body text, make images align with headlines

--- a/app/View/Themed/Accelerator/webroot/css/sass/screen.scss
+++ b/app/View/Themed/Accelerator/webroot/css/sass/screen.scss
@@ -329,7 +329,6 @@ section {
     h1 a {
       display: block;
       @include sprites-sprite(logo);
-      background-image: url(../img/sprites/logo.png);
       @extend .hidden-text;
     }
     a.button {
@@ -593,7 +592,7 @@ div.main {
       }
     }
     img {
-      margin: 1.5em 0;
+      margin: 1.25em 0;
       max-width: 100%;
     }
     p {
